--- a/app/src/main/res/layout/template_departure_hour.xml
+++ b/app/src/main/res/layout/template_departure_hour.xml
@@ -7,7 +7,7 @@
     android:padding="2dp"
     app:cardBackgroundColor="?backgroundViewColor"
     app:cardCornerRadius="0dp"
-    app:cardElevation="?elevation">
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
