--- a/app/src/main/res/layout/template_route.xml
+++ b/app/src/main/res/layout/template_route.xml
@@ -78,6 +78,8 @@
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/light_gray" />
 
 </LinearLayout>
