--- a/app/src/main/res/values/style_strings.xml
+++ b/app/src/main/res/values/style_strings.xml
@@ -163,4 +163,459 @@
       }
     ]
     </string>
+  <string name="white" translatable="false" >
+  [
+    {
+        \"featureType\": \"administrative\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"saturation\": \"-100\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.province\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"landscape\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"saturation\": -100
+            },
+            {
+                \"lightness\": 65
+            },
+            {
+                \"visibility\": \"on\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"poi\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"saturation\": -100
+            },
+            {
+                \"lightness\": \"50\"
+            },
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"saturation\": \"-100\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.highway\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.arterial\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"lightness\": \"30\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.local\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"lightness\": \"40\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"transit\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"saturation\": -100
+            },
+            {
+                \"visibility\": \"simplified\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"transit.station\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"transit.station.bus\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"water\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"hue\": \"#ffff00\"
+            },
+            {
+                \"lightness\": -25
+            },
+            {
+                \"saturation\": -97
+            }
+        ]
+    },
+    {
+        \"featureType\": \"water\",
+        \"elementType\": \"labels\",
+        \"stylers\": [
+            {
+                \"lightness\": -25
+            },
+            {
+                \"saturation\": -100
+            }
+        ]
+    }
+  ]
+  </string>
+  <string name="dark_2" translatable="false">
+  [
+    {
+        \"featureType\": \"all\",
+        \"elementType\": \"labels.text.fill\",
+        \"stylers\": [
+            {
+                \"saturation\": 36
+            },
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 40
+            }
+        ]
+    },
+    {
+        \"featureType\": \"all\",
+        \"elementType\": \"labels.text.stroke\",
+        \"stylers\": [
+            {
+                \"visibility\": \"on\"
+            },
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 16
+            }
+        ]
+    },
+    {
+        \"featureType\": \"all\",
+        \"elementType\": \"labels.icon\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative\",
+        \"elementType\": \"geometry.fill\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 20
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative\",
+        \"elementType\": \"geometry.stroke\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 17
+            },
+            {
+                \"weight\": 1.2
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative\",
+        \"elementType\": \"labels\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.country\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.country\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.country\",
+        \"elementType\": \"labels.text\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.province\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.locality\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            },
+            {
+                \"saturation\": \"-100\"
+            },
+            {
+                \"lightness\": \"30\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.neighborhood\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"administrative.land_parcel\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"landscape\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            },
+            {
+                \"gamma\": \"0.00\"
+            },
+            {
+                \"lightness\": \"74\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"landscape\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 20
+            }
+        ]
+    },
+    {
+        \"featureType\": \"landscape.man_made\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"lightness\": \"3\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"poi\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"off\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"poi\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 21
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"saturation\": \"-100\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"visibility\": \"simplified\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.highway\",
+        \"elementType\": \"all\",
+        \"stylers\": [
+            {
+                \"visibility\": \"on\"
+            },
+            {
+                \"saturation\": \"-100\"
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.highway\",
+        \"elementType\": \"geometry.fill\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 17
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.highway\",
+        \"elementType\": \"geometry.stroke\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 29
+            },
+            {
+                \"weight\": 0.2
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.arterial\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 18
+            }
+        ]
+    },
+    {
+        \"featureType\": \"road.local\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 16
+            }
+        ]
+    },
+    {
+        \"featureType\": \"transit\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 19
+            }
+        ]
+    },
+    {
+        \"featureType\": \"water\",
+        \"elementType\": \"geometry\",
+        \"stylers\": [
+            {
+                \"color\": \"#000000\"
+            },
+            {
+                \"lightness\": 17
+            }
+        ]
+    }
+  ]
+  </string>
 </resources>
