--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:alpha="0.7"
+        android:alpha="0.8"
         android:text="@string/transport"
         android:textSize="33sp"
 
@@ -113,7 +113,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.6"
+        android:alpha="0.7"
         android:text="@string/the_way_it_was"
         android:textSize="23sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +125,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.5"
+        android:alpha="0.6"
         android:text="@string/meant_to_be"
         android:textSize="19sp"
 
@@ -134,7 +134,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-    <TextView
+    <View
         android:id="@+id/circle1"
         android:layout_width="39dp"
         android:layout_height="39dp"
@@ -144,7 +144,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+    <View
         android:id="@+id/textView3"
         android:layout_width="28dp"
         android:layout_height="28dp"
@@ -153,7 +153,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView21"
         app:layout_constraintStart_toEndOf="@+id/textView9" />
 
-    <TextView
+    <View
         android:id="@+id/textView9"
         android:layout_width="46dp"
         android:layout_height="46dp"
@@ -163,7 +163,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintStart_toEndOf="@+id/textView14" />
 
-    <TextView
+    <View
         android:id="@+id/textView10"
         android:layout_width="33dp"
         android:layout_height="33dp"
@@ -172,7 +172,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView20"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-    <TextView
+    <View
         android:id="@+id/textView11"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -182,7 +182,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView15"
         app:layout_constraintStart_toEndOf="@+id/textView22" />
 
-    <TextView
+    <View
         android:id="@+id/textView12"
         android:layout_width="29dp"
         android:layout_height="29dp"
@@ -193,7 +193,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
 
-    <TextView
+    <View
         android:id="@+id/textView13"
         android:layout_width="38dp"
         android:layout_height="38dp"
@@ -203,7 +203,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
-    <TextView
+    <View
         android:id="@+id/textView14"
         android:layout_width="31dp"
         android:layout_height="31dp"
@@ -213,7 +213,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/circle1" />
 
-    <TextView
+    <View
         android:id="@+id/textView15"
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -223,7 +223,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView16"
         app:layout_constraintTop_toTopOf="@+id/textView19" />
 
-    <TextView
+    <View
         android:id="@+id/textView16"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -233,7 +233,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toTopOf="@+id/textView21" />
 
-    <TextView
+    <View
         android:id="@+id/textView20"
         android:layout_width="17dp"
         android:layout_height="17dp"
@@ -243,7 +243,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-    <TextView
+    <View
         android:id="@+id/textView21"
         android:layout_width="39dp"
         android:layout_height="39dp"
@@ -253,7 +253,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintStart_toEndOf="@+id/textView9" />
 
-    <TextView
+    <View
         android:id="@+id/textView22"
         android:layout_width="15dp"
         android:layout_height="15dp"
@@ -263,7 +263,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView15"
         app:layout_constraintStart_toEndOf="@+id/textView19" />
 
-    <TextView
+    <View
         android:id="@+id/textView19"
         android:layout_width="28dp"
         android:layout_height="28dp"
@@ -273,7 +273,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView16"
         app:layout_constraintStart_toEndOf="@+id/textView21" />
 
-    <TextView
+    <View
         android:id="@+id/textView23"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -283,7 +283,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toTopOf="@+id/textView11" />
 
-    <TextView
+    <View
         android:id="@+id/textView24"
         android:layout_width="27dp"
         android:layout_height="27dp"
@@ -293,7 +293,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView23"
         app:layout_constraintStart_toEndOf="@+id/textView11" />
 
-    <TextView
+    <View
         android:id="@+id/textView25"
         android:layout_width="32dp"
         android:layout_height="32dp"
@@ -302,7 +302,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView23"
         app:layout_constraintStart_toEndOf="@+id/textView24" />
 
-    <TextView
+    <View
         android:id="@+id/textView26"
         android:layout_width="22dp"
         android:layout_height="22dp"
@@ -312,7 +312,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView23"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
-    <TextView
+    <View
         android:id="@+id/textView27"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -321,7 +321,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView36"
         app:layout_constraintTop_toBottomOf="@+id/textView46" />
 
-    <TextView
+    <View
         android:id="@+id/textView28"
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -331,7 +331,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView33"
         app:layout_constraintTop_toTopOf="@+id/textView48" />
 
-    <TextView
+    <View
         android:id="@+id/textView29"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -341,7 +341,7 @@
         app:layout_constraintStart_toStartOf="@+id/textView32"
         app:layout_constraintTop_toBottomOf="@+id/textView39" />
 
-    <TextView
+    <View
         android:id="@+id/textView30"
         android:layout_width="29dp"
         android:layout_height="29dp"
@@ -351,7 +351,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView32"
         app:layout_constraintEnd_toStartOf="@+id/textView38" />
 
-    <TextView
+    <View
         android:id="@+id/textView31"
         android:layout_width="38dp"
         android:layout_height="38dp"
@@ -361,7 +361,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView30"
         app:layout_constraintEnd_toStartOf="@+id/textView40" />
 
-    <TextView
+    <View
         android:id="@+id/textView32"
         android:layout_width="46dp"
         android:layout_height="46dp"
@@ -370,7 +370,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView39"
         app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
-    <TextView
+    <View
         android:id="@+id/textView33"
         android:layout_width="29dp"
         android:layout_height="29dp"
@@ -380,7 +380,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView37"
         app:layout_constraintTop_toBottomOf="@+id/textView48" />
 
-    <TextView
+    <View
         android:id="@+id/textView34"
         android:layout_width="24dp"
         android:layout_height="24dp"
@@ -390,7 +390,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView27"
         app:layout_constraintEnd_toStartOf="@+id/textView46" />
 
-    <TextView
+    <View
         android:id="@+id/textView35"
         android:layout_width="22dp"
         android:layout_height="22dp"
@@ -399,7 +399,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView27"
         app:layout_constraintEnd_toStartOf="@+id/textView34" />
 
-    <TextView
+    <View
         android:id="@+id/textView36"
         android:layout_width="47dp"
         android:layout_height="47dp"
@@ -409,7 +409,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView47"
         app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
-    <TextView
+    <View
         android:id="@+id/textView37"
         android:layout_width="39dp"
         android:layout_height="39dp"
@@ -419,7 +419,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView32"
         app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
-    <TextView
+    <View
         android:id="@+id/textView38"
         android:layout_width="44dp"
         android:layout_height="44dp"
@@ -429,7 +429,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <View
         android:id="@+id/textView39"
         android:layout_width="31dp"
         android:layout_height="31dp"
@@ -439,7 +439,7 @@
         app:layout_constraintStart_toStartOf="@+id/textView38"
         app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
-    <TextView
+    <View
         android:id="@+id/textView40"
         android:layout_width="15dp"
         android:layout_height="15dp"
@@ -449,7 +449,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView30"
         app:layout_constraintEnd_toStartOf="@+id/textView38" />
 
-    <TextView
+    <View
         android:id="@+id/textView45"
         android:layout_width="28dp"
         android:layout_height="28dp"
@@ -457,7 +457,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView32"
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
-    <TextView
+    <View
         android:id="@+id/textView46"
         android:layout_width="27dp"
         android:layout_height="27dp"
@@ -466,7 +466,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView36"
         app:layout_constraintEnd_toStartOf="@+id/textView28" />
 
-    <TextView
+    <View
         android:id="@+id/textView47"
         android:layout_width="15dp"
         android:layout_height="15dp"
@@ -476,7 +476,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView33"
         app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
-    <TextView
+    <View
         android:id="@+id/textView48"
         android:layout_width="40dp"
         android:layout_height="40dp"
