--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -353,7 +353,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="40dp"
         android:alpha="0.5"
-        android:text="approved by"
+        android:text="@string/approved_by"
         android:textColor="@color/color_black"
         app:layout_constraintBottom_toTopOf="@+id/textView_developers"
         app:layout_constraintStart_toStartOf="parent" />
@@ -363,7 +363,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.5"
-        android:text="Offically"
+        android:text="@string/officially"
         android:textColor="@color/color_black"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
