--- a/app/src/main/res/layout/template_tag.xml
+++ b/app/src/main/res/layout/template_tag.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="4dp"
+    android:layout_marginBottom="2dp"
     android:background="@drawable/stretched_circle"
     android:clickable="true"
     android:focusable="true"
