--- a/app/src/main/res/layout/template_tag_search.xml
+++ b/app/src/main/res/layout/template_tag_search.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tag_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
+        android:clickable="false"
         android:orientation="horizontal">
 
         <TextView
@@ -51,6 +52,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
+            android:clickable="true"
+            android:focusable="true"
             android:text="@string/following"
             android:textAllCaps="true"
             android:textSize="12sp"
