--- a/app/src/main/res/layout/template_forum_post.xml
+++ b/app/src/main/res/layout/template_forum_post.xml
@@ -2,11 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/post_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="?backgroundViewColor"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical"
-    app:cardCornerRadius="0dp">
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,7 +23,7 @@
             android:id="@+id/user_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/stretched_circle"
             android:backgroundTint="#4a148c"
             android:padding="2dp"
@@ -70,11 +74,12 @@
             android:id="@+id/user_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginTop="4dp"
             android:src="@drawable/ic_perm_identity_black_24dp"
             app:civ_border_color="?android:textColor"
             app:civ_border_width="2dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/posted_time" />
 
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/post_tags"
