--- a/app/src/main/res/layout/activity_tag_message.xml
+++ b/app/src/main/res/layout/activity_tag_message.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.VegaSolutions.lpptransit.ui.activities.TagMessageActivity">
+    tools:context="com.VegaSolutions.lpptransit.ui.activities.forum.TagMessageActivity">
 
+    <FrameLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
