--- a/app/src/main/res/layout/activity_departure.xml
+++ b/app/src/main/res/layout/activity_departure.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.DepartureActivity">
+    tools:context=".ui.activities.lpp.DepartureActivity">
 
     <FrameLayout
         android:id="@+id/header"
