--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="?backgroundViewColor"
     android:orientation="vertical"
-    tools:context=".ui.activities.NewMessageActivity">
+    tools:context=".ui.activities.forum.NewMessageActivity">
 
     <FrameLayout
         android:id="@+id/header"
