--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -6,7 +6,7 @@
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.PostListFragment">
+    tools:context=".ui.fragments.forum.PostListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/post_list_rv"
