--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -25,7 +25,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Banana"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/user_image"
@@ -42,10 +41,10 @@
         android:padding="2dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:text="BLABLA"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/user_name"
         app:layout_constraintStart_toEndOf="@+id/user_name"
         app:layout_constraintTop_toTopOf="@+id/user_name" />
@@ -69,8 +68,34 @@
                 android:id="@+id/post_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="@string/test_text" />
+                android:layout_margin="16dp" />
+
+            <LinearLayout
+                android:id="@+id/post_pictures_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="@string/attachments"
+                    android:textStyle="bold" />
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/post_pictures"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    app:alignItems="flex_start"
+                    app:flexWrap="wrap"
+                    app:layout_constraintEnd_toEndOf="@+id/post_content"
+                    app:layout_constraintStart_toStartOf="@+id/post_content"
+                    app:layout_constraintTop_toBottomOf="@+id/post_content" />
+            </LinearLayout>
 
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/post_tags"
