--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -140,6 +140,7 @@
 
                 <ImageButton
                     android:id="@+id/station_opposite_btn"
+                    android:src="@drawable/ic_swap_vert_black_24dp"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_marginTop="16dp"
@@ -149,8 +150,7 @@
                     android:tint="?android:textColor"
                     app:layout_constraintBottom_toTopOf="@+id/station_tab_layout"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_swap_vert_black_24dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/station_favourite"
