--- a/app/src/main/res/layout/fragment_live_arrival.xml
+++ b/app/src/main/res/layout/fragment_live_arrival.xml
@@ -10,7 +10,7 @@
         android:id="@+id/live_arrival_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.LiveArrivalFragment">
+        tools:context=".ui.fragments.lpp.LiveArrivalFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/live_arrival_rv"
