--- a/app/src/main/res/layout/fragment_routes_on_station.xml
+++ b/app/src/main/res/layout/fragment_routes_on_station.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".ui.fragments.RoutesOnStationFragment" />
+        tools:context=".ui.fragments.lpp.RoutesOnStationFragment" />
 
     <ProgressBar
         android:id="@+id/progressBar"
