--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:background="@drawable/top_shadow_gradient"
+        android:translationZ="6dp"
         app:layout_anchor="@id/bottom_sheet" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
