--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,7 @@
         <item name="android:editTextColor">@android:color/white</item>
         <item name="android:textColorHint">#ffA2A2A2</item>
         <item name="dividerColor">@color/divider_dark</item>
+        <item name="android:windowBackground">@color/color_main_background_dark</item>
         <item name="elevation">0dp</item>
     </style>
 
