--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -36,5 +36,6 @@
         <item name="colorPrimaryDark">@color/color_main_background_dark</item>
         <item name="elevation">0dp</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowBackground">@color/color_main_background_dark</item>
     </style>
 </resources>
