--- a/app/src/main/res/layout/template_comment.xml
+++ b/app/src/main/res/layout/template_comment.xml
@@ -14,22 +14,21 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingStart="16dp"
         android:paddingTop="16dp"
         android:paddingEnd="16dp">
 
         <TextView
             android:id="@+id/user_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/stretched_circle"
             android:backgroundTint="#4a148c"
             android:padding="2dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:text="DEVELOPER"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/user_name"
@@ -40,7 +39,8 @@
             android:id="@+id/posted_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/posted_time"
+            android:text="12 min"
+            android:textColor="?android:textColorHint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,56 +48,31 @@
             android:id="@+id/post_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:text="Nova posodobitev prihaja kmalu."
-            android:textColor="?android:textColorHint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/user_image" />
+            app:layout_constraintStart_toStartOf="@+id/user_name"
+            app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
         <TextView
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:text="Domen Kralj"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/user_image"
-            app:layout_constraintStart_toEndOf="@+id/user_image"
-            app:layout_constraintTop_toTopOf="@+id/user_image" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_perm_identity_black_24dp"
-            app:civ_border_color="?android:textColor"
-            app:civ_border_width="0dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/posted_time" />
-
-        <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/post_tags"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:alignItems="flex_start"
-            app:flexWrap="wrap"
-            app:layout_constraintEnd_toEndOf="@+id/post_content"
-            app:layout_constraintStart_toStartOf="@+id/post_content"
-            app:layout_constraintTop_toBottomOf="@+id/post_content" />
+            app:layout_constraintTop_toTopOf="@+id/posted_time" />
 
         <TextView
             android:id="@+id/post_replies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="@string/post_comments"
+            android:text="@string/comment_replies"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/post_like_container"
             app:layout_constraintEnd_toStartOf="@+id/post_like_container"
             app:layout_constraintTop_toTopOf="@+id/post_like_container" />
@@ -107,14 +82,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/like_container"
+            android:layout_marginBottom="8dp"
             android:padding="3dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/view4"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_tags">
+            app:layout_constraintTop_toBottomOf="@+id/post_content">
 
             <ImageView
                 android:id="@+id/post_like_image"
@@ -136,15 +110,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/post_like_image"
                 app:layout_constraintTop_toTopOf="@+id/post_like_image" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <View
-            android:id="@+id/view4"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="?dividerColor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
