--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -345,24 +345,12 @@
         app:layout_constraintTop_toTopOf="@+id/tvw28" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="40dp"
-        android:alpha="0.5"
-        android:text="@string/approved_by"
-        app:layout_constraintBottom_toTopOf="@+id/textView_developers"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
         android:id="@+id/textView50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.5"
         android:text="@string/officially"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2" />
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="624dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
